# parlecho

./: .gitignore  README.md  eval_latency.md  eval_latency_gpu.md  eval_quant.md  eval_quant_gpu.md  eval_results.md  eval_results_large.md  eval_speaker_sim.md  pyproject.toml
parlecho/: cli.py  config.py  pipeline.py
parlecho/eval/: datasets.py  quant_bench.py  run_eval.py  speaker_sim.py
parlecho/stages/: asr.py  diarize.py  remix.py  separate.py  translate.py  translate_ct2.py  tts.py
parlecho/streaming/: chunker.py  orchestrator.py  worker.py
