[project]
name = "parlecho"
version = "0.1.0"
description = "Real-time speech translation with voice-cloned dubbing"
requires-python = ">=3.11"

[project.scripts]
parlecho = "parlecho.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["parlecho*"]